[package]
name = "parachain-magnet-runtime"
version = "0.5.6"
authors = ["Magnet"]
description = "A scalable evm smart contract platform runtime, utilizing DOT as the gas fee."
license = "Apache License 2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
hex-literal = { workspace = true, optional = true }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
smallvec = { workspace = true }

# Local
mp-system = { path = "../primitives/system", default-features = false }
pallet-assets-bridge = { path = "../pallets/assets-bridge", default-features = false }
pallet-evm-utils = { path = "../pallets/evm-utils", default-features = false }
pallet-precompile-substrate-utils = { path = "../pallets/evm/precompile/substrate-utils", default-features = false }
pallet-order = { path = "../pallets/order", default-features = false }
magnet-primitives-order = { path = "../primitives/order", default-features = false }
pallet-pot = { path = "../pallets/pot", default-features = false }
pallet-pot-runtime-api = { path = "../pallets/pot/runtime-api", default-features = false }
pallet-assurance = { path = "../pallets/assurance", default-features = false }
pallet-liquidation = {path = "../pallets/liquidation", default-features = false}

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true}
frame-executive = { workspace = true, default-features = false}
frame-support = { workspace = true, default-features = false}
frame-system = { workspace = true, default-features = false}
frame-system-benchmarking = { workspace = true, default-features = false, optional = true}
frame-system-rpc-runtime-api = { workspace = true, default-features = false}
frame-try-runtime = { workspace = true, default-features = false, optional = true}
pallet-aura = { workspace = true, default-features = false}
pallet-authorship = { workspace = true, default-features = false}
pallet-balances = { workspace = true, default-features = false}
pallet-assets = { workspace = true, default-features = false}
pallet-preimage = { workspace = true, default-features = false}
pallet-session = { workspace = true, default-features = false}
pallet-sudo = { workspace = true, default-features = false}
pallet-collective = { workspace = true, default-features = false}
pallet-timestamp = { workspace = true, default-features = false}
pallet-transaction-payment = { workspace = true, default-features = false}
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false}
sp-api = { workspace = true, default-features = false}
sp-block-builder = { workspace = true, default-features = false}
sp-genesis-builder = { workspace = true, default-features = false}
sp-consensus-aura = { workspace = true, default-features = false}
sp-core = { workspace = true, default-features = false}
sp-inherents = { workspace = true, default-features = false}
sp-offchain = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}
sp-session = { workspace = true, default-features = false}
sp-std = { workspace = true, default-features = false}
sp-transaction-pool = { workspace = true, default-features = false}
sp-version = { workspace = true, default-features = false}
sp-trie = { workspace = true, default-features = false }
pallet-society ={ workspace = true, default-features = false}
pallet-utility = { workspace = true, default-features = false}
sp-arithmetic = { workspace = true, default-features = false}
pallet-referenda = { workspace = true, default-features = false}
pallet-whitelist = { workspace = true, default-features = false}
pallet-conviction-voting = { workspace = true, default-features = false}
pallet-ranked-collective = { workspace = true, default-features = false}
pallet-scheduler = { workspace = true, default-features = false}
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false}
pallet-contracts = { workspace = true, default-features = false}
pallet-message-queue = { workspace = true, default-features = false }

# Polkadot
pallet-xcm = { workspace = true, default-features = false}
polkadot-parachain-primitives = { workspace = true, default-features = false}
polkadot-primitives = { workspace = true, default-features = false}
polkadot-runtime-common = { workspace = true, default-features = false}
xcm = { workspace = true, default-features = false}
xcm-builder = { workspace = true, default-features = false}
xcm-executor = { workspace = true, default-features = false}

# Cumulus
cumulus-pallet-aura-ext = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false, features = ["parameterized-consensus-hook",] }
cumulus-pallet-session-benchmarking = { workspace = true, default-features = false}
cumulus-pallet-xcm = { workspace = true, default-features = false }
cumulus-pallet-xcmp-queue = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-primitives-utility = { workspace = true, default-features = false }
pallet-collator-selection = { workspace = true, default-features = false }
parachain-info = { workspace = true, default-features = false }
parachains-common = { workspace = true, default-features = false }
cumulus-primitives-timestamp ={ workspace = true, default-features = false }

#Frontier FRAME
pallet-evm-chain-id = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false }
pallet-ethereum = { workspace = true, default-features = false }
pallet-base-fee = { workspace = true, default-features = false }
pallet-dynamic-fee = { workspace = true, default-features = false }
pallet-evm-precompile-modexp = { workspace = true, default-features = false }
pallet-evm-precompile-sha3fips = { workspace = true, default-features = false }
pallet-evm-precompile-simple = { workspace = true, default-features = false }
pallet-hotfix-sufficients = { workspace = true, default-features = false }
# Frontier Primitive
fp-evm = { workspace = true, default-features = false }
fp-account = { workspace = true, default-features = false }
fp-dynamic-fee = { workspace = true, default-features = false }
fp-rpc = { workspace = true, default-features = false }
fp-self-contained = { workspace = true, default-features = false, features = ["serde", "try-runtime"] }

[features]
default = ["std", "with-rocksdb-weights"]
with-rocksdb-weights = []
with-paritydb-weights = []
std = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-session-benchmarking/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-message-queue/std",	
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"pallet-evm-chain-id/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-simple/std",
	"pallet-hotfix-sufficients/std",
	"fp-evm/std",
	"fp-account/std",
	"fp-dynamic-fee/std",
	"fp-rpc/std",
	"polkadot-primitives/std",
	"parachains-common/std",
	"pallet-collective/std",
	"fp-self-contained/std",
	"pallet-assets/std",
	"pallet-assets-bridge/std",
	"pallet-evm-utils/std",
	"pallet-precompile-substrate-utils/std",
	"magnet-primitives-order/std",
	"pallet-order/std",
	"sp-trie/std",
	"cumulus-primitives-timestamp/std",
    "pallet-liquidation/std",
	"pallet-utility/std",
	"pallet-pot/std",
	"pallet-assurance/std",
	"pallet-preimage/std",
	"pallet-referenda/std",
	"pallet-whitelist/std",
	"pallet-conviction-voting/std",
	"pallet-ranked-collective/std",
	"pallet-scheduler/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-contracts/std",	
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",	
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"pallet-evm-utils/runtime-benchmarks",
	"pallet-precompile-substrate-utils/runtime-benchmarks",
	"pallet-order/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
    "pallet-liquidation/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-pot/runtime-benchmarks",
	"pallet-assurance/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-ranked-collective/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",	
]

try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-message-queue/try-runtime",	
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-evm-utils/try-runtime",
	"pallet-precompile-substrate-utils/try-runtime",
	"pallet-order/try-runtime",
    "pallet-liquidation/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-assets-bridge/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-evm-chain-id/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-ethereum/try-runtime",
	"pallet-base-fee/try-runtime",
	"pallet-dynamic-fee/try-runtime",
	"pallet-hotfix-sufficients/try-runtime",
	"pallet-pot/try-runtime",
	"pallet-assurance/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-assurance/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-whitelist/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-ranked-collective/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-contracts/try-runtime",	
]

experimental = [ "pallet-aura/experimental" ]
