[package]
name = "pallet-assets-bridge"
version = "0.1.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

pallet-assets = { workspace = true, default-features = false}
pallet-evm = { workspace = true, default-features = false }

[dev-dependencies]
ethabi = { workspace = true }
hex-literal = { workspace = true }
pallet-balances = { workspace = true, default-features = false}
pallet-timestamp = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",

	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",

	"pallet-assets/std",
	"pallet-evm/std",
	"pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
