[package]
name = "pallet-assurance"
version = "0.1.0"
authors = ["Alex Wang"]
description = "Ensuring block production as parathread."
license = "Apache-2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
mp-system = { path = "../../primitives/system", default-features = false }
log = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true}
frame-support = { workspace = true, default-features = false}
frame-system = { workspace = true, default-features = false}
sp-core = { workspace = true, default-features = false}
sp-std = { workspace = true, default-features = false}
cumulus-pallet-parachain-system = { workspace = true, default-features = false, features = ["parameterized-consensus-hook"] }

[dev-dependencies]
serde = { version = "1.0.188" }

# Substrate
sp-core = { workspace = true, default-features = false}
sp-io = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}
cumulus-primitives-core = { workspace = true, default-features = false}
pallet-balances = { workspace = true, default-features = false}
pallet-timestamp = { workspace = true, default-features = false}

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"mp-system/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
]