[package]
name = "pallet-liquidation"
version = "0.1.0"
authors = ["Magport Tech."]
description = "gas fee caculate and liquidation"
license = "Apache-2.0"
edition.workspace = true
repository.workspace = true
homepage = "https://magnet.magport.io/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = [
    "derive",
]}
log = {workspace = true, default-features = false}
scale-info = { workspace = true, default-features = false, features = ["derive"] }
smallvec = { workspace = true }

#pallet-order = {path = "../order", default-features = false}
pallet-pot = {path = "../pot", default-features = false}
mp-system = { path = "../../primitives/system", default-features = false }

pallet-balances = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false}
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true}
pallet-utility = { workspace = true, default-features = false}
xcm = { workspace = true, default-features = false}
xcm-builder = { workspace = true, default-features = false}
cumulus-pallet-xcmp-queue = { workspace = true, default-features = false}
xcm-executor = { workspace = true, default-features = false}
pallet-xcm = {workspace = true, default-features = false}

[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-assets/std",
#    "pallet-order/std",
    "pallet-pot/std",
    "mp-system/std",
    "pallet-utility/std",
    "frame-benchmarking/std",
    "pallet-xcm/std",
    "xcm/std",
    "xcm-builder/std",
    "cumulus-pallet-xcmp-queue/std",
    "xcm-executor/std",
    "sp-consensus-aura/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
    "pallet-utility/try-runtime",
]
