[workspace]
members = [
    "pallet",
    "rpc",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Eiger <hello@eiger.co>"]
readme = "README.md"
repository = "https://github.com/eigerco/substrate-movevm-pallet"

[workspace.dependencies]
# crates.io
anyhow = { workspace = true, default-features = false }
bcs = { workspace = true, default-features = false }
blake2 = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
hashbrown = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
jsonrpsee = { workspace = true, default-features = false, features = ["server", "macros", "client-core"] }
log = { workspace = true, default-features = false }
rand = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, default-features = false, features = ["derive"] }

# Polkadot crates
frame-benchmarking = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Eiger crates
move-core-types = { workspace = true, features = ["address32"], default-features = false }
move-stdlib = { workspace = true, features = ["stdlib-bytecode"], default-features = false }
move-vm-backend = { workspace = true, default-features = false }
move-vm-backend-common = { workspace = true, default-features = false }
