[package]
name = "pallet-on-demand"
authors = ["Magnet"]
description = "On demand order runtime logic."
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
log = { workspace = true, default-features = false }
hex-literal = { workspace = true }

# Local
mp-coretime-on-demand = { path = "../../primitives/coretime/on-demand", default-features = false }

# Cumulus
cumulus-pallet-parachain-system = { workspace = true, default-features = false}
cumulus-primitives-core= { workspace = true, default-features = false}

# Polkadot
runtime-parachains = { workspace = true , default-features = false}
primitives = { workspace = true , default-features = false}


# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true}
frame-support = { workspace = true, default-features = false}
frame-system = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}
sp-trie = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-core = { workspace = true , default-features = false}
pallet-aura = { workspace = true, default-features = false }

[dev-dependencies]
serde = { workspace = true }
codec = { workspace = true, features = ["derive"], default-features = false }
hex = { workspace = true, default-features = false }

# Substrate
sp-core = { workspace = true, default-features = false}
sp-io = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}
sp-consensus-aura = { workspace = true, default-features = false}
pallet-balances = { workspace = true, default-features = false }
pallet-collective = { workspace = true, default-features = false}
pallet-xcm = { workspace = true, default-features = false}
pallet-society ={ workspace = true, default-features = false}
xcm-builder = { workspace = true, default-features = false }
parachains-common = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
sp-keyring = { workspace = true, default-features = false}

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"mp-coretime-on-demand/std",
	"log/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"runtime-parachains/std",
	"primitives/std",
	"sp-trie/std",
	"pallet-balances/std",
	"sp-core/std",
	"pallet-aura/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
