[package]
name = "pallet-xcm"
version = "1.0.0"
description = "A pallet for handling XCM programs."
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bounded-collections = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
log = { workspace = true, default-features = false }

frame-support = { workspace = true, features = ["experimental"], default-features = false}
frame-system = { workspace = true, default-features = false}
sp-core = { workspace = true, default-features = false}
sp-io = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}
sp-std = { workspace = true, default-features = false}

xcm = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }

# marked optional, used in benchmarking
frame-benchmarking = { workspace = true, default-features = false}
pallet-balances = { workspace = true, default-features = false}

[dev-dependencies]
pallet-assets = { workspace = true, default-features = false}
polkadot-runtime-parachains = { workspace = true, default-features = false}
polkadot-parachain-primitives = { workspace = true, default-features = false}

[features]
default = [ "std" ]
std = [
	"bounded-collections/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"pallet-assets/std",
	"polkadot-runtime-parachains/std",
	"polkadot-parachain-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"polkadot-runtime-parachains/try-runtime",
	"sp-runtime/try-runtime",
]
